Fixed firefox search style alignment.

--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -604,7 +604,6 @@ input#edit-search-block-form--2.spinner {
 custom grid
 ========================================================================== */
 .grid-11-left {
-  -moz-box-sizing: border-box;
   float: left;
   margin-left: 0;
   margin-right: -72%;
